--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=inviewer
 DB_USER=diego
-DB_PASSWORD=mysqlpassword
+DB_PASSWORD=diegomysql03092005
 NODEMAILER_USER=diegocornejo958@gmail.com
 NODEMAILER_PASSWORD=kjzf jdcn zyoi lfjd
+HOST=0.0.0.0
+DB_URL=mysql://root:NNHYVzBMnBZBITKcCIkkbAhXHtolXrLW@yamanote.proxy.rlwy.net:49928/railway
